[package]
name = "collision-debug"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.37"
async-std = "1.13.1"
nannou = { version = "0.19.0", features = ["wasm-experimental"] }
nannou_egui = "0.19.0"
sylt-2d = { git = "https://github.com/hessikaveh/sylt-2d.git" }
